--- a/scss/zasedani.scss
+++ b/scss/zasedani.scss
@@ -1,10 +1,6 @@
 @use 'variables' as v;
 @use 'navbar';
 
-html{
-    font-size: 130%;
-}
-
 body{
     background-color: v.$colortest;
 }
@@ -43,7 +39,7 @@ body{
             border: solid black;
             border-width: 0 0.12em 0.12em 0;
             display: inline-block;
-            padding: 3px;
+            padding: 0.1em;
 
             height: 0.15em;
             width: 0.15em;
